Optimize forked JVM for latency